增加zipkin工程 修改包名

--- a/service-feign/src/main/resources/application.properties
+++ b/service-feign/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=feignservice
+spring.application.name=feign-service
 server.port=9903
 
 eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
