--- a/service-hi/src/main/resources/application.properties
+++ b/service-hi/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=hiservice
+spring.application.name=hi-service
 server.port=9901
 
 eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.instance.lease-expiration-duration-in-seconds=60
+
+spring.zipkin.base-url=http://localhost:9933
