--- a/service-zuul/src/main/resources/application.properties
+++ b/service-zuul/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=zuulservice
+spring.application.name=zuul-service
 server.port=9911
 
 eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
 zuul.routes.api0.path=/api0/**
-zuul.routes.api0.service-id=ribbonservice
+zuul.routes.api0.service-id=ribbon-service
 zuul.routes.api1.path=/api1/**
-zuul.routes.api1.service-id=feignservice
+zuul.routes.api1.service-id=feign-service
