--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.application.name=configserver
+spring.application.name=config-server
 server.port=9966
 
-eureka.client.service-url.defualtZone=http://localhost:9999/eureka/
+eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=60
 
-spring.cloud.config.server.git.basedir=https://github.com/ryanrunning/config-center.git
+#spring.cloud.config.server.git.basedir=https://github.com/ryanrunning/config-center.git
+spring.cloud.config.server.git.uri=https://github.com/ryanrunning/config-center
 spring.cloud.config.server.git.search-paths=spring-micros
 spring.cloud.config.label=master
+#spring.cloud.config.server.git.default-label=master
 spring.cloud.config.server.git.password=
 spring.cloud.config.server.git.username=
+
+#management.endpoints.web.exposure.include=*
