--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>demo.micro.spring</groupId>
     <artifactId>spring-micros</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
 
 </project>
