--- a/service-ribbon/src/main/resources/application.properties
+++ b/service-ribbon/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ribbonservice
+spring.application.name=ribbon-service
 server.port=9902
 
 eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
